fix: inputmediacomposer break the line correctly

--- a/src/components/InputMediaComposer/InputMediaComposer.module.scss
+++ b/src/components/InputMediaComposer/InputMediaComposer.module.scss
@@ -3,12 +3,12 @@
 .manyMediaContainer {
   width: 100%;
 
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(auto, 9.7rem));
-  gap: 1.4rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
 
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
 
   .imageGroup {
     width: 11.2rem;
